# TinySeries

./: CMakeLists.txt
TinyRenderer/: CMakeLists.txt
TinyRenderer/include/: geometry.h
TinyRenderer/src/: main.cpp
